# rost-ros

./: .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  GettingStarted.md  ProjectHome.md  readme.md  readme.txt  rost_audio.md  stack.xml
rost/: CMakeLists.txt  manifest.xml
rost/include/: rost.hpp
rost/src/cli/: generate_random_words.cpp  program_options.hpp  rost_1d.cpp
rost/src/nodes/: rost_1d_node.cpp  rost_txy_image_node.cpp
rost_audio/: CMakeLists.txt  MontrealSounds2k.txt  mainpage.dox  manifest.xml  test-vocab.txt  wavifier.py
rost_audio/libmfcc/: libmfcc.h
rost_audio/msg/: AudioRaw.msg
rost_audio/src/: audio_transport.cpp  csv_words.cpp  gen_vocab.cpp  mfcc_node.cpp  mfcc_wav.cpp  mfcc_wav_cli.cpp  save_wav.cpp
rost_common/: mainpage.dox  manifest.xml
rost_common/msg/: LocalSurprise.msg  LocalSurprise1D.msg  Perplexity.msg  Summary.msg  SummaryObservations.msg  TopicModel.msg  TopicWeights.msg  WordObservation.msg
rost_common/srv/: GetImage.srv  GetModelPerplexity.srv  GetTopicModel.srv  GetTopicsForTime.srv  RefineTopics.srv  SetTopicModel.srv
rost_curosity/: CMakeLists.txt  mainpage.dox  manifest.xml
rost_curosity/src/: curosity.cpp
rost_experiments/: manifest.xml
rost_experiments/scripts/: do_refinement_and_get_ppx
rost_launch/: mainpage.dox  manifest.xml
rost_launch/launch/: camera.launch  core.launch  default.launch  file.launch  file2.launch  rost.launch  rost_audio.launch  rost_gabor.launch  visualize_bag.launch
rost_summarizer/: CMakeLists.txt  mainpage.dox  manifest.xml
rost_summarizer/src/: summarizer.cpp  summarizer.hpp
rost_topics/: CMakeLists.txt  mainpage.dox
rost_topics/data/test/: scene1.topics.txt  scene2.4topics.txt
rost_topics/include/: irost.hpp  markov.hpp  rost.hpp
rost_topics/include/rost/: refinery.hpp  word_reader.hpp
rost_topics/scripts/: do_refinement_and_get_ppx
rost_topics/src/cli/: generate_random_words.cpp  irost_1d.cpp  program_options.hpp  rost_1d.cpp  test_neighbors.cpp  test_pose.cpp  test_rost.cpp  test_rost_online.cpp
rost_topics/src/nodes/: rost_1d_node.cpp  rost_txy_image_node.cpp
rost_vision/: CMakeLists.txt  mainpage.dox  manifest.xml
rost_vision/data/orb_vocab/: barbados2010_5000.yml
rost_vision/data/surf_vocab/: googlsv_sparse_monosurf.yml  underwater1k.yml
rost_vision/ext/flann/test/: .#flann_lsh_test.cpp
rost_vision/launch/: visualwords.launch  visualwords.xml  visualwords_surf.xml
rost_vision/src/: binary_features.cpp  binary_features.h  binary_features.hpp  bow.cpp  bow.hpp  bowtk.cpp  feature_detector.hpp  flann_matcher.hpp  gabor_words.cpp  gabor_words.hpp  image_cache.cpp  image_source.cpp  image_source.hpp  orbtk.cpp
rost_visualize/: CMakeLists.txt  mainpage.dox  manifest.xml
rost_visualize/ext/src/YAMLCPP_EXT-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  yaml-cpp.pc
rost_visualize/ext/src/YAMLCPP_EXT-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  run-tests
rost_visualize/ext/src/YAMLCPP_EXT-build/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake  parse  read  sandbox
rost_visualize/ext/src/YAMLCPP_EXT-stamp/: YAMLCPP_EXT-urlinfo.txt
rost_visualize/ext/tmp/: YAMLCPP_EXT-cfgcmd.txt
rost_visualize/resource/: all-images.tpl  all-topics.tpl  params.json  topic.tpl
rost_visualize/src/: audiovis.cpp  draw_keypoints.hpp  draw_local_surprise.hpp  draw_plot.hpp  draw_topic_hist.hpp  generateBrowser.cpp  summary.cpp  video_writer.hpp  visualwords.cpp
